# xox-model

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  vite.config.ts
apps/api/: package.json  pyproject.toml  tsconfig.json  vitest.config.ts
apps/api/app/: __init__.py  api.py  audit.py  core.py  defaults.py  domain_types.py  facts.py  main.py  migrations.py  models.py  projection.py  schemas.py  services_auth.py  services_ledger.py  services_share.py  services_workspace.py
apps/api/scripts/: agent-real-provider-smoke.ts
apps/api/src/: main.ts  server.ts
apps/api/src/agent/: action-draft-builder.ts  action-draft-utils.ts  action-graph-store.ts  action-requests.ts  active-memory-recall.ts  ag-ui-projection.ts  agent-action-runtime.ts  agent-kernel.ts  agent-run-engine.ts  agent-timeline-projector.ts  agent-transcript-projector.ts  agentic-os-adapter.ts  ambient-context.ts  memory.ts  (+69 more)
apps/api/tests/: action-observation.test.ts  agent-architecture.test.ts  agent-evaluation-dataset.test.ts  agent-memory-core.test.ts  agent-planning-session.test.ts  agent-semantic-hardening.test.ts  agent-transcript.test.ts  agent-turn-resolver.test.ts  agentic-os-adapter.test.ts  agentic-os-adr0077.test.ts  agentic-os-hook-plane.test.ts  api.test.ts  loop-obligation-ledger.test.ts  provider-runtime.test.ts  response-evaluator.test.ts  sandbox-storage.test.ts  sandbox-tool.test.ts  test_api.py  tool-context-engine.test.ts  tool-observation-outcome.test.ts  tool-runtime.test.ts
apps/api/xox_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+358 files in other folders)
